@@ -327,6 +327,9 @@
     <ClInclude Include="..\..\..\src\command_classes\Security.h">
       <Filter>Command Classes</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\src\command_classes\TimeParameters.h">
+      <Filter>Command Classes</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\src\command_classes\DoorLock.h">
       <Filter>Command Classes</Filter>
     </ClInclude>
@@ -633,6 +636,9 @@
       <Filter>Command Classes</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\command_classes\Security.cpp">
+      <Filter>Command Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\command_classes\TimeParameters.cpp">
       <Filter>Command Classes</Filter>
     </ClCompile>
   </ItemGroup>
